--- a/app/views/pages/_main_content.html.erb
+++ b/app/views/pages/_main_content.html.erb
@@ -26,10 +26,11 @@
 					</a>
 				</li>
 				<li>
+					
 					<a href="javascript:;">
-						<span class="featuretitle">"강력한 템플릿 서버!</span>
-						<span>M-server의 웹편집기능이 부여된<br>
-						B2B, B2C 템플릿 스토어 입니다.<br></span>
+						<span class="featuretitle">MLayout 2.5 무료 배포중!</span>
+						<span>그래픽 전문가용 편집 프로그램 MLayout과<br>
+						헤움서체 96종을 사용해보세요!<br></span>
 					</a>
 				</li>
 				<li>
