--- a/app/views/mybooks/_book_folder.html.erb
+++ b/app/views/mybooks/_book_folder.html.erb
@@ -15,7 +15,7 @@
 		end
 	end
 	
-	@mybooks = Mybook.all(:order => [:order])
+	@mybooks = Mybook.all(:order => [:order], :user_id => current_user.id)
 	end %>
 
 <div id="sortables_book">	
