--- a/app/views/admin/temps/_temp_edit.html.erb
+++ b/app/views/admin/temps/_temp_edit.html.erb
@@ -1,8 +1,7 @@
-<h1>Editing mytemplate</h1>
-
-<% form_for @temp, :url => { :action => "update" } do |f| %>
+<% form_for @temp, :html => {:onsubmit => "javascript:return result2();"}, :url => { :action => "update" } do |f| %>
   <%= f.error_messages %>
-
+  <input type="hidden" name="user_list" id="user_list" value="">
+  <h1>기본정보</h1>
   <p>
     <%= f.label :name %><br />
     <%= f.text_field :name %>
@@ -15,8 +14,106 @@
     <%= f.label :size %><br />
     <%= f.text_field :size %>
   </p>
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
+
+  <br><br>
+  <h1>사용자 공개설정 ================</h1>
+
+<table>
+	<tr>
+		<td align="center"><font color="white">비공개</font></td>
+		<td align="center">&nbsp;</td>
+		<td align="center"><font color="white">공개</font></td>				
+	</tr>
+	<tr>
+		<td>
+			<select style="width:150; height:150;font-size:12pt" multiple id="s1">
+				<% user_lists = Usertempopenlist.all(:temp_id => @temp.id)
+				   user_array = Array.new
+				   
+				   i = 0
+				   user_lists.each do |u|
+					user_array[i] = u.user_id
+					i += 1
+				   end
+				%>
+				<% @users = User.all(:userid.not => user_array);%>
+				<% @users.each do |user| %>
+				<option value="<%= user.userid %>"><%= user.userid %>(<%= user.name %>)</option>
+				<% end %>
+			</select>
+		</td>
+		<td>
+			<input type="button" value="=>" id="addSelect"/><br>
+			<input type="button" value="<=" id="delSelect"/><br>
+		</td>
+		<td>
+			<select style="width:150; height:150;font-size:12pt" multiple id="s2"> 
+				<% user_lists = Usertempopenlist.all(:temp_id => @temp.id)
+				   user_array = Array.new
+				   
+				   i = 0
+				   user_lists.each do |u|
+					user_array[i] = u.user_id
+					i += 1
+				   end
+				%>
+				<% @users = User.all(:userid => user_array);%>
+				<% @users.each do |user| %>
+				<option value="<%= user.userid %>"><%= user.userid %>(<%= user.name %>)</option>
+				<% end %>				
+			</select>
+		</td>				
+	</tr>
+</table>
+
+<p>
+  <%= f.submit 'Update' %>
+</p>
 <% end %>
+
+
+<script src="/js/other_libs/jquery-1.3.2.js" type="text/javascript" charset="utf-8"></script>
+<script>
+$(document).ready(function(){
+
+	$("#addSelect").click(function(){
+
+		$("#s1 option:selected").each(function(){
+			$("#s2").append($(this));
+		});
+		
+	}); 	 	 
+		
+	$("#delSelect").click(function(){
+
+		$("#s2 option:selected").each(function(){
+			$("#s1").append($(this));
+		});
+	});
+});	 
+
+</script>
+
+<script>
+function result2(){
+	var s2_length = $("#s2 option").length;
+	var result = "";
+	var current_value = "";
+	
+	if(s2_length>0){
+		for(i=0;i<s2_length;i++){
+			current_value = $("#s2 option:eq("+i+")").val();
+			if(i==0){
+				result = current_value;										
+			}else{
+				result = result + "," + current_value;					
+			}
+		}
+	}
+
+	document.all.user_list.value = result;
+  	return true;
+}
+
+</script>
 
