--- a/app/views/admin/temps/_temp_edit.html.erb
+++ b/app/views/admin/temps/_temp_edit.html.erb
@@ -1,7 +1,7 @@
 <% form_for @temp, :html => {:onsubmit => "javascript:return result2();"}, :url => { :action => "update" } do |f| %>
   <%= f.error_messages %>
   <input type="hidden" name="user_list" id="user_list" value="">
-  <h1>기본정보</h1>
+  <h1>템플릿 기본정보</h1>
   <p>
     <%= f.label :name %><br />
     <%= f.text_field :name %>
@@ -15,57 +15,58 @@
     <%= f.text_field :size %>
   </p>
 
+<% if TEMPLATE_OPEN_FUNC_TOGGLE == true %>
   <br><br>
   <h1>사용자 공개설정 ================</h1>
 
-<table>
-	<tr>
-		<td align="center"><font color="white">비공개</font></td>
-		<td align="center">&nbsp;</td>
-		<td align="center"><font color="white">공개</font></td>				
-	</tr>
-	<tr>
-		<td>
-			<select style="width:150; height:150;font-size:12pt" multiple id="s1">
-				<% user_lists = Usertempopenlist.all(:temp_id => @temp.id)
-				   user_array = Array.new
+	<table>
+		<tr>
+			<td align="center"><font color="white">비공개</font></td>
+			<td align="center">&nbsp;</td>
+			<td align="center"><font color="white">공개</font></td>				
+		</tr>
+		<tr>
+			<td>
+				<select style="width:150; height:150;font-size:12pt" multiple id="s1">
+					<% user_lists = Usertempopenlist.all(:temp_id => @temp.id)
+					   user_array = Array.new
 				   
-				   i = 0
-				   user_lists.each do |u|
-					user_array[i] = u.user_id
-					i += 1
-				   end
-				%>
-				<% @users = User.all(:userid.not => user_array);%>
-				<% @users.each do |user| %>
-				<option value="<%= user.userid %>"><%= user.userid %>(<%= user.name %>)</option>
-				<% end %>
-			</select>
-		</td>
-		<td>
-			<input type="button" value="=>" id="addSelect"/><br>
-			<input type="button" value="<=" id="delSelect"/><br>
-		</td>
-		<td>
-			<select style="width:150; height:150;font-size:12pt" multiple id="s2"> 
-				<% user_lists = Usertempopenlist.all(:temp_id => @temp.id)
-				   user_array = Array.new
+					   i = 0
+					   user_lists.each do |u|
+						user_array[i] = u.user_id
+						i += 1
+					   end
+					%>
+					<% @users = User.all(:userid.not => user_array);%>
+					<% @users.each do |user| %>
+					<option value="<%= user.userid %>"><%= user.userid %>(<%= user.name %>)</option>
+					<% end %>
+				</select>
+			</td>
+			<td>
+				<input type="button" value="=>" id="addSelect"/><br>
+				<input type="button" value="<=" id="delSelect"/><br>
+			</td>
+			<td>
+				<select style="width:150; height:150;font-size:12pt" multiple id="s2"> 
+					<% user_lists = Usertempopenlist.all(:temp_id => @temp.id)
+					   user_array = Array.new
 				   
-				   i = 0
-				   user_lists.each do |u|
-					user_array[i] = u.user_id
-					i += 1
-				   end
-				%>
-				<% @users = User.all(:userid => user_array);%>
-				<% @users.each do |user| %>
-				<option value="<%= user.userid %>"><%= user.userid %>(<%= user.name %>)</option>
-				<% end %>				
-			</select>
-		</td>				
-	</tr>
-</table>
-
+					   i = 0
+					   user_lists.each do |u|
+						user_array[i] = u.user_id
+						i += 1
+					   end
+					%>
+					<% @users = User.all(:userid => user_array);%>
+					<% @users.each do |user| %>
+					<option value="<%= user.userid %>"><%= user.userid %>(<%= user.name %>)</option>
+					<% end %>				
+				</select>
+			</td>				
+		</tr>
+	</table>
+<% end %>
 <p>
   <%= f.submit 'Update' %>
 </p>
@@ -75,7 +76,7 @@
 <script src="/js/other_libs/jquery-1.3.2.js" type="text/javascript" charset="utf-8"></script>
 <script>
 $(document).ready(function(){
-
+<% if TEMPLATE_OPEN_FUNC_TOGGLE == true %>
 	$("#addSelect").click(function(){
 
 		$("#s1 option:selected").each(function(){
@@ -91,11 +92,12 @@ $(document).ready(function(){
 		});
 	});
 });	 
-
+<% end %>
 </script>
 
 <script>
 function result2(){
+	
 	var s2_length = $("#s2 option").length;
 	var result = "";
 	var current_value = "";
