--- a/app/views/admin/temps/_temp_index.html.erb
+++ b/app/views/admin/temps/_temp_index.html.erb
@@ -86,13 +86,12 @@
 					else
 						sort = "all"
 					end
-      				if signed_in?
-						if sort == "all" or sort == nil or sort == "" %>
-							<%= Temp.all.search2(params[:search], params[:page]).isopen(current_user.userid).pager.to_html "/admin/temps?sort=#{sort}&search=#{params[:search]}"	 %>
-						<% else %>
-							<%= Temp.all(:category => sort).search2(params[:search], params[:page]).isopen(current_user.userid).pager.to_html "/admin/temps?sort=#{sort}&search=#{params[:search]}" %>
-						<% end  
-					end %>
+
+					if sort == "all" or sort == nil or sort == "" %>
+						<%= Temp.all.search2(params[:search], params[:page]).pager.to_html "/admin/temps?sort=#{sort}&search=#{params[:search]}"	 %>
+					<% else %>
+						<%= Temp.all(:category => sort).search2(params[:search], params[:page]).pager.to_html "/admin/temps?sort=#{sort}&search=#{params[:search]}" %>
+					<% end  %>
 
 					</div>
 				</td>
