--- a/app/views/temps/_temp_index.html.erb
+++ b/app/views/temps/_temp_index.html.erb
@@ -164,15 +164,17 @@ end%>
 			    	@subcategory_name = params[:subcategory_name]
 				end
 
-			    if @category_name != nil and @subcategory_name != nil%>
-			      <%= Temp.all(:category => @category_name, :subcategory => @subcategory_name).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{@category_name}&subcategory_name=#{@subcategory_name}&search=#{params[:search]}" %>
-			    <% elsif @category_name != nil %>
-			      <%= Temp.all(:category => @category_name).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{@category_name}&search=#{params[:search]}" %>      
-			    <% elsif  @subcategory_name != nil %>
-			      <%= Temp.all(:subcategory => @subcategory_name).search(params[:search], params[:page]).pager.to_html "/temps?subcategory_name=#{@subcategory_name}&search=#{params[:search]}" %>      
-			    <%else %>
-			      <%= Temp.all.search(params[:search], params[:page]).pager.to_html "/temps?search=#{params[:search]}" %>      
-			    <% end %>				
+      			if signed_in?
+				    if @category_name != nil and @subcategory_name != nil%>
+				      <%= Temp.all(:category => @category_name, :subcategory => @subcategory_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{@category_name}&subcategory_name=#{@subcategory_name}&search=#{params[:search]}" %>
+				    <% elsif @category_name != nil %>
+				      <%= Temp.all(:category => @category_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{@category_name}&search=#{params[:search]}" %>      
+				    <% elsif  @subcategory_name != nil %>
+				      <%= Temp.all(:subcategory => @subcategory_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?subcategory_name=#{@subcategory_name}&search=#{params[:search]}" %>      
+				    <%else %>
+				      <%= Temp.all().isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?search=#{params[:search]}" %>      
+				    <% end 
+				end%>				
 
 			</div></td>
 		<td width="230">
