--- a/app/views/temps/_temp_show.html.erb
+++ b/app/views/temps/_temp_show.html.erb
@@ -95,7 +95,12 @@ if File.exist?(RAILS_ROOT + "/public" + @temp.preview_url)
 
 <%elsif @temp.category == "현수막"%>
 <table>
-		<tr width="730" height="220">
+	
+	<tr width="730" height="260">
+        <td width="730" style="padding:20 0 0 0;" colspan="2" align="center" ><%= image_tag temp_image_path %></td>
+	</tr>
+
+<!--		<tr width="730" height="220">
             <td class="imgmargin_banner" colspan="2"><center><%= image_tag temp_image_path %></center></td>
 
         </tr>
@@ -145,7 +150,7 @@ if File.exist?(RAILS_ROOT + "/public" + @temp.preview_url)
 
 		
 		</tr>
-
+-->
 </table>
 
 <%end%>
