preview image issue fixed

--- a/app/views/admin/categories/_category_index.html.erb
+++ b/app/views/admin/categories/_category_index.html.erb
@@ -1,6 +1,13 @@
 <h1>Listing categories</h1>
 
+
+
 <table>
+<tr>
+	<td colspan="5" align="right">
+		<%= link_to 'New category', new_category_path %>		
+	</td>
+</tr>
 <tr>
 	<td colspan="5">		
 		<div id="line_top"></div>
@@ -42,4 +49,3 @@ end  %>
 
 <br />
 
-<%= link_to 'New category', new_category_path %>
