--- a/app/views/temps/_temp_show.html.erb
+++ b/app/views/temps/_temp_show.html.erb
@@ -48,7 +48,7 @@ if File.exist?(RAILS_ROOT + "/public" + @temp.preview_url)
 
 <table>
 	<tr width="730" height="260">
-        <td width="730" style="padding:20 0 0 0;" colspan="2" align="center" ><%= image_tag temp_image_path %></td>			
+        <td width="730" style="padding:20 0 0 0;" colspan="2" align="center" ><%= image_tag temp_image_path, :width => '730px' %></td>			
 	</tr>
 <!-- 		<tr width="450" height="260">
             <td width="400" align="center"></td>			
