--- a/app/views/temps/_temp_index.html.erb
+++ b/app/views/temps/_temp_index.html.erb
@@ -158,19 +158,22 @@ end%>
 			<div class="pager">
 				<%
 				if params[:category_name] != nil
-					@category_name = params[:category_name]
+					@category_name = Category.get(params[:category_name].to_i).name
+					puts_message @category_name
 				end
 				if params[:subcategory_name] != nil
-			    	@subcategory_name = params[:subcategory_name]
+			    	@subcategory_name = Subcategory.get(params[:subcategory_name].to_i).name
+					puts_message @subcategory_name
 				end
+
 
       			if signed_in?
 				    if @category_name != nil and @subcategory_name != nil%>
-				      <%= Temp.all(:category => @category_name, :subcategory => @subcategory_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{@category_name}&subcategory_name=#{@subcategory_name}&search=#{params[:search]}" %>
+				      <%= Temp.all(:category => @category_name, :subcategory => @subcategory_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{params[:category_name]}&subcategory_name=#{params[:subcategory_name]}&search=#{params[:search]}" %>
 				    <% elsif @category_name != nil %>
-				      <%= Temp.all(:category => @category_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{@category_name}&search=#{params[:search]}" %>      
+				      <%= Temp.all(:category => @category_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{params[:category_name]}&search=#{params[:search]}" %>      
 				    <% elsif  @subcategory_name != nil %>
-				      <%= Temp.all(:subcategory => @subcategory_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?subcategory_name=#{@subcategory_name}&search=#{params[:search]}" %>      
+				      <%= Temp.all(:subcategory => @subcategory_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?subcategory_name=#params[:subcategory_name]}&search=#{params[:search]}" %>      
 				    <%else %>
 				      <%= Temp.all().isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?search=#{params[:search]}" %>      
 				    <% end 
