--- a/app/views/admin/temps/_subcategories.html.erb
+++ b/app/views/admin/temps/_subcategories.html.erb
@@ -1,1 +1,1 @@
-<%= collection_select(:temp, :subcategory, subcategories, :name, :name,{:selected   => "1"}) %>
+<%= collection_select(:temp, :subcategory, subcategories, :id, :name,{:selected   => "1"}) %>
