--- a/app/views/admin/temps/_temp_show.html.erb
+++ b/app/views/admin/temps/_temp_show.html.erb
@@ -1,5 +1,5 @@
 <% if @temp.preview_url;temp_image_path = @temp.preview_url else; temp_image_path = @temp.thumb_url end  %>
-<p5><a href="#"><%= Category.get(@temp.category.to_i).name %></a>
+<p5><a href="#"><%= Category.get(@temp.category.to_i).name if !Category.get(@temp.category.to_i).nil? %></a>
 	<a class="on" href="#">&nbsp;&nbsp;>&nbsp;<%= Subcategory.get(@temp.subcategory.to_i).name if !Subcategory.get(@temp.subcategory.to_i).nil?%></a>  
 
 </p5>
