--- a/app/views/admin/temps/_temp_new.html.erb
+++ b/app/views/admin/temps/_temp_new.html.erb
@@ -6,7 +6,7 @@
   <input type="hidden" name="user_list" id="user_list" value=""> 
   <p>
 	<%= javascript_include_tag :defaults %>	
-	<%= collection_select :temp, :category, @categories, :name, :name, 
+	<%= collection_select :temp, :category, @categories, :id, :name, 
 						 {:selected   => "1"}, 
 						 {:onchange => "#{remote_function(:url  => {:action => "update_subcategories"},:with => "'category_id='+value")}"} %>
 	<span id="subcategories"><%= render :partial => 'subcategories', :object => Subcategory.all(:category_id => Category.first.id) %></span>	
