--- a/app/views/mytemplates/_mytemplate_index.html.erb
+++ b/app/views/mytemplates/_mytemplate_index.html.erb
@@ -1,3 +1,12 @@
+<% 
+up_my_temps = Mytemplate.all(:user_id => current_user.id)
+up_my_temps.each do |u|
+	u.category = Temp.get(u.temp_id).category
+	u.subcategory = Temp.get(u.temp_id).subcategory
+	u.save
+	puts_message "mytemp updated"
+end
+%>
 <style>
 #layer1{border:0px solid green;position:absolute; left:500px; top:200px;width:100;height:100px; z-index:999999}
 </style>
@@ -117,7 +126,7 @@ function hide_progress() {
 				<tr> 
 				<td class="templatelist"><a href="/mytemplates/<%=my.id%>?cate=<%= cate %>&search=<%=params[:search]%>&page=<%=params[:page]%>"><%= my.name %></a></td></tr>
 				<tr> 
-				<td class="templatelist"><a href="#"><%= my.category%><%="/"+my.subcategory if my.subcategory != nil%></a></td></tr>
+				<td class="templatelist"><a href="#"><%= Category.get(my.category.to_i).name if !Category.get(my.category.to_i).nil? %><%="/"+Subcategory.get(my.subcategory.to_i).name if Subcategory.get(my.subcategory.to_i) != nil%></a></td></tr>
 				<tr>
 				<td class="templatelist">
 
