--- a/app/views/mytemplates/_mytemplate_index.html.erb
+++ b/app/views/mytemplates/_mytemplate_index.html.erb
@@ -1,9 +1,11 @@
 <% 
 up_my_temps = Mytemplate.all(:user_id => current_user.id)
 up_my_temps.each do |u|
-	u.category = Temp.get(u.temp_id).category
-	u.subcategory = Temp.get(u.temp_id).subcategory
-	u.save
+	if Temp.get(u.temp_id) != nil?
+		u.category = Temp.get(u.temp_id).category
+		u.subcategory = Temp.get(u.temp_id).subcategory
+		u.save
+	end
 	puts_message "mytemp updated"
 end
 %>
