--- a/app/views/mytemplates/_mytemplate_show.html.erb
+++ b/app/views/mytemplates/_mytemplate_show.html.erb
@@ -4,8 +4,10 @@
 		temp_image_path = @mytemplate.thumb_url  		
 	end 
 %>
-<p5><a href="#"><%= @mytemplate.category %></a>
-	<a class="on" href="#">&nbsp;&nbsp;>&nbsp;<%= @mytemplate.subcategory %></a>  
+<p5><a href="#"><%= Category.get(@mytemplate.category.to_i).name if !Category.get(@mytemplate.category.to_i).nil?%></a>
+	<% if !Subcategory.get(@mytemplate.subcategory.to_i).nil? %>
+		<a class="on" href="#">&nbsp;&nbsp;>&nbsp;<%= Subcategory.get(@mytemplate.subcategory.to_i).name %></a>  
+	<% end %>
 
 </p5>
 
